--- a/selection/pyvenv.cfg
+++ b/selection/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = D:\Python\Python311
+home = D:\Python\Python313
 include-system-site-packages = false
-version = 3.11.2
-executable = D:\Python\Python311\python.exe
-command = D:\Python\Python311\python.exe -m venv C:\Users\Stepan\Dokumenty\Github\GACR_selection_study1_backend\selection
+version = 3.13.0
+executable = D:\Python\Python313\python.exe
+command = D:\Python\Python313\python.exe -m venv C:\Users\Stepan\Documents\GitHub\GACR_selection_study3_backend\selection
